# Algorithms-and-Data-Structures

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md
.github/workflows/: cpplint.yml  cpplint_modified_files.yml
coverage/: coverage_report.bst.h.5be5eb10b3e61284265578394592d59c.html  coverage_report.bst_table.h.9405fc3cd688bdb428772715a2cb40cc.html  coverage_report.cmonom.h.3c5bebf0b484e2c52985710ab367e333.html  coverage_report.cycle_detector.h.e68b4f578854b44b3f899998b637097e.html  coverage_report.dsu.cpp.a4e26ec18158fbb7feab098021b56e4b.html  coverage_report.easy_example.cpp.89901ef62f814ba635b477497aa8c81f.html  coverage_report.functions.html  coverage_report.hash_chained.h.3b38cd7695c271b86dc31616eb470e4c.html  coverage_report.hash_opened.h.99b6b06b226a88b1a92acfcaf5000892.html  coverage_report.html  coverage_report.ihash.h.92090efaf5ea731de174436690227f0d.html  coverage_report.iheap.h.87a8132429158d2a9b0b640a1d649ff7.html  coverage_report.itable.h.d4b386bf08b019ac54ff2f746d809fa3.html  coverage_report.lexem.cpp.75c379973a6414c393b226e8399d83d1.html  coverage_report.lexem.h.6118632c4f8510a1c7c8acf5d70e80c9.html  coverage_report.list.h.6c146d8b07ef799f2c9e96f74f80de8f.html  coverage_report.lstack.h.a77f0f5a26e8814739797d1b24c8d6f6.html  coverage_report.main.cpp.395c1089ded171b1757742cab9e7297d.html  coverage_report.massive.h.455ccf79a72f112cfc7d0e19ed3cf4b6.html  coverage_report.massive_sorted_table.h.ba6555e5a85595fd2bc9189f66459d79.html  coverage_report.massive_unsorted_table.h.4f341598028f001fdc8f2b5a8ad73ba6.html  coverage_report.matrix.h.51b4bf6bc19bf480cbffbc77b513c216.html  coverage_report.max_heap.h.d3c546cab1264790b8f0576dc076f8c0.html  coverage_report.min_heap.h.1a9954f3f1139152c4d6d5669aeab1de.html  coverage_report.node.h.70d4f85e7af0fa521e99e558e61a0791.html  coverage_report.pair.h.218fefc69a13eed06107259d6ea8862f.html  coverage_report.parser.cpp.545cf9c29f5ee3f10ab4056a165acdf9.html  coverage_report.queue.h.1cb5b0a09a6b40732823c0a1955bbc0d.html  coverage_report.stack.h.f49742cc1783402fc170429b2063f110.html  coverage_report.unsorted_table.h.93fd02d2625debba7157bf7537b05f56.html  coverage_report.vector.h.9d6d1d314a9ee7f641ff3d0b5ecaf50c.html
lib_algorithms/: CMakeLists.txt
lib_algorithms/include/: cycle_detector.h  parser.h
lib_algorithms/source/: parser.cpp
lib_bst/: CMakeLists.txt
lib_bst/include/: bst.h
lib_bst_table/: CMakeLists.txt
lib_bst_table/include/: bst_table.h
lib_calculator/: CMakeLists.txt
lib_calculator/include/: expression.h  lexem.h
lib_calculator/src/: lexem.cpp
lib_dsu/: CMakeLists.txt
lib_dsu/include/: dsu.h
lib_dsu/src/: dsu.cpp
lib_easy_example/: CMakeLists.txt  easy_example.cpp  easy_example.h
lib_easy_example/src/: easy_example.cpp
lib_hash/: CMakeLists.txt
lib_hash/include/: hash_chained.h  hash_opened.h  ihash.h
lib_heap/: CMakeLists.txt
lib_heap/include/: iheap.h  max_heap.h  min_heap.h
lib_list/: CMakeLists.txt  list.cpp  list.h  node.cpp  node.h
lib_list/include/: list.h  node.h
lib_massive/: CMakeLists.txt  massive.cpp  massive.h
lib_massive/include/: massive.h
lib_massive_table/: CMakeLists.txt
lib_massive_table/include/: massive_sorted_table.h  massive_unsorted_table.h
lib_matrix/: CMakeLists.txt
lib_matrix/include/: matrix.h
lib_pair/: CMakeLists.txt  pair.cpp  pair.h
lib_pair/include/: pair.h
lib_polynom/: CMakeLists.txt
lib_polynom/include/: cmonom.h  cpolynom.h
lib_polynom/src/: cmonom.cpp  cpolynom.cpp
lib_queue/: CMakeLists.txt  queue.cpp  queue.h
lib_queue/include/: queue.h
lib_stack/: CMakeLists.txt  stack.cpp  stack.h
lib_stack/include/: lstack.h  stack.h
lib_table/: CMakeLists.txt
lib_table/include/: itable.h  unsorted_table.h
lib_vector/: CMakeLists.txt  vector.cpp  vector.h
lib_vector/include/: vector.h
main/: CMakeLists.txt  hash.cpp  heap.cpp  main.cpp  utilities.h
tests/: CMakeLists.txt  test_additional.cpp  test_algoritms.cpp  test_bst.cpp  test_bst_inorder_iterator.cpp  test_bst_levelorder_iterator.cpp  test_bst_table.cpp  test_cmonom.cpp  test_dsu.cpp  test_easy_example.cpp  test_hash_chained.cpp  test_hash_opened.cpp  test_lexems.cpp  test_list.cpp  test_lstack.cpp  test_massive.cpp  test_massive_sorted_table.cpp  test_massive_table.cpp  test_matrix.cpp  test_max_heap.cpp  test_min_heap.cpp  test_pair.cpp  test_queue.cpp  test_stack.cpp  test_unsorted_table.cpp  test_vector.cpp
